--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,8 @@
 theme: jekyll-theme-dinky
+title: 前端视角
+SEOTitle: WIKE的博客 | wike Blog
+header-img: https://csdn.52wike.com/base/8b79008ea545dfe626d9eeb4fca95026.jpg
+email: 200569525@qq.com
+description: "WIKE的成长日记"
+keyword: "WIKE, GO ,前端"
+url: "https://wike2019.github.io/wike-blog/"
